adjust context and lastPanel

--- a/CC_wTrack.html
+++ b/CC_wTrack.html
@@ -42,8 +42,8 @@
         </div>
 
         <!--column 2 scrollable-->
-        <div class="colmRight jctx-host jctx-id-panels">
-            <div id="markers"></div>
+        <div class="colmRight">
+            <div id="markers" class="jctx-host jctx-id-panels"></div>
             <ul class="jctx jctx-id-panels jctx-white jctx-white-shadow">
                 <li data-action="cut">Cut</li>
                 <li data-action="copy">Copy</li>
